Bug fix (when printing, bullets would get cut off a bit)

--- a/assets/site.sass
+++ b/assets/site.sass
@@ -131,7 +131,7 @@ h2 + p
   margin-top: 0.3em
 
 ul
-  padding: 0 0 0 1em
+  padding: 0 0 0 1.1em
 
 dt
   float: left
